# SPDX-License-Identifier: LGPL-2.1-or-later
# SPDX-FileCopyrightText: 2005 - 2026 Fifengine contributors

# ---------------------------------------------------------------------
# Project
# ---------------------------------------------------------------------

[project]
name = "libfife"
version = "0.4.2"
description = "FIFE library"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Fifengine contributors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]

[project.urls]
Homepage = "https://www.fifengine.net"
Repository = "https://github.com/fifengine/fifengine"
Source = "https://github.com/fifengine/fifengine"
Changelog = "https://github.com/fifengine/fifengine/blob/master/CHANGELOG.md"
Documentation = "https://docs.fifengine.net/"
Tracker = "https://github.com/fifengine/fifengine/issues"

[project.optional-dependencies]
dev = ["pytest"]

# ---------------------------------------------------------------------
# Build System
# ---------------------------------------------------------------------
# 1. scikit_build_core -> drives CMake build process
# 2. cibuildwheel      -> orchestrates
# 3. vcpkg             -> dependencies
# ---------------------------------------------------------------------
# External dependencies (not bundled by default):
#   libfifechan_sdl2.so, libfifechan_opengl.so, SDL2, OpenAL, etc.
# Bundling external deps into the wheel (for redistributable wheels):
#   Windows: delevewheel
#   Linux:   auditwheel
#   Mac:     delocate
# These can copy those .so/.dylib/.dll into the wheel and patch load paths.
# This is done during CI via cibuildwheel as a post-build step of the wheel.
# ---------------------------------------------------------------------

[build-system]
requires = [
    "scikit-build-core",
    "packaging"
]
build-backend = "scikit_build_core.build"

# We need to pass in CMAKE_TOOLCHAIN_FILE for VCPKG.
[tool.scikit-build]
build.verbose = true
cmake.build-type = "Release"
cmake.args = ["-DVCPKG_TARGET_TRIPLET=x64-linux", "-DPYTHON_SITE_PACKAGES=."]

[tool.scikit-build.wheel]
install-dir = ""
exclude = ["**/__pycache__", "**/*.pyc", "**/.git"]

# ---------------------------------------------------------------------
# cibuildwheel
# ---------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp{311,312,313}-*"
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# ---------------------------------------------------------------------
# Check wheel contents
# ---------------------------------------------------------------------

[tool.check-wheel-contents]
toplevel = ["fife"]

# ---------------------------------------------------------------------
# Additional Python Tools
# ---------------------------------------------------------------------

[tool.black]
line-length = 90
target-version = ["py311"]
extend-exclude = "^(build|out|vcpkg_installed|engine/swigwrappers)/"

[tool.ruff]
line-length = 90
target-version = "py311"
extend-exclude = ["build", "out", "vcpkg_installed", "engine/swigwrappers"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/python/fife"]
ignore_missing_imports = true
show_error_codes = true
exclude = "^(tests|build|out|vcpkg_installed)/"
