# SPDX-License-Identifier: LGPL-2.1-or-later
# SPDX-FileCopyrightText: 2005 - 2026 Fifengine contributors

# ---------------------------------------------------------------------
# Project
# ---------------------------------------------------------------------

[project]
name = "libfife"
version = "0.5.0"
description = "FIFE library"
license="LGPL-2.1-or-later"
requires-python = ">=3.13"
dependencies = []
authors = [
  { name = "Fifengine contributors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]

[project.urls]
Homepage = "https://www.fifengine.net"
Repository = "https://github.com/fifengine/fifengine"
Source = "https://github.com/fifengine/fifengine"
Changelog = "https://github.com/fifengine/fifengine/blob/master/CHANGELOG.md"
Documentation = "https://docs.fifengine.net/"
Tracker = "https://github.com/fifengine/fifengine/issues"

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "isort",
  "pytest",
  "pytest-cov"
]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
]

# ---------------------------------------------------------------------
# Build System
# ---------------------------------------------------------------------
# 1. scikit_build_core -> drives CMake build process
# 2. cibuildwheel      -> orchestrates
# 3. vcpkg             -> dependencies
# ---------------------------------------------------------------------
# External dependencies (not bundled by default):
#   libfifechan_sdl2.so, libfifechan_opengl.so, SDL2, OpenAL, etc.
# Bundling external deps into the wheel (for redistributable wheels):
#   Windows: delevewheel
#   Linux:   auditwheel
#   Mac:     delocate
# These can copy those .so/.dylib/.dll into the wheel and patch load paths.
# This is done during CI via cibuildwheel as a post-build step of the wheel.
# ---------------------------------------------------------------------

[build-system]
requires = [
  "scikit-build-core",
  "packaging"
]
build-backend = "scikit_build_core.build"

# We need to pass in VCPKG_TARGET_TRIPLET, CMAKE_TOOLCHAIN_FILE for VCPKG.
[tool.scikit-build]
build.verbose = true
cmake.build-type = "Release"
cmake.args = ["-DPYTHON_SITE_PACKAGES=."]

[tool.scikit-build.wheel]
install-dir = ""
exclude = ["**/__pycache__", "**/*.pyc", "**/.git"]

[[tool.scikit-build.wheel.packages]]
path = "."
dest = "fife"
include = [
  "AUTHORS",
  "CHANGELOG.md",
  "LICENSE.md",
  "README.md"
]

# ---------------------------------------------------------------------
# cibuildwheel
# ---------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp{313,314}-*"  # lowest version must equal project.requires-python
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# ---------------------------------------------------------------------
# check-wheel-contents
# ---------------------------------------------------------------------

[tool.check-wheel-contents]
toplevel = [
  "fife",
  "libfife.libs"
]
ignore = [
  "W010" # TODO? toplevel library directory contains no Python modules
]

# ---------------------------------------------------------------------
# Additional Python Tools
# ---------------------------------------------------------------------

[tool.black]
line-length = 90
target-version = ["py313"]
extend-exclude = "^(src/swigwrappers)/"

[tool.ruff]
line-length = 90
target-version = "py313"
extend-exclude = ["build", "out", "vcpkg_installed", "swigwrappers"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
  "E",  # pycodestyle-error
  "W",  # pycodestyle-warnings
  "F",  # pyflakes
  "I",  # isort
  "U"   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E501"]  # line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
files = ["src/python/fife"]
ignore_missing_imports = true
show_error_codes = true
exclude = "^(tests|build|out|vcpkg_installed)/"
