#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
AC_CHECK_HEADERS(stdint.h dlfcn.h)
AC_CHECK_HEADERS(alsa/asoundlib.h)	#for alsa

AC_CHECK_FUNCS(strtof)
AC_CHECK_TYPE(int64_t)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(uint)
AC_CHECK_SIZEOF(void *)

# need in checking separately
AC_CHECK_LIB(m, acosf)
AC_CHECK_LIB(m, sqrtf)

# Checks for programs.
#AC_PROG_CC

# Checks for libraries.

# Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS([fcntl.h float.h memory.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_C_INLINE
#AC_TYPE_INT64_T
#AC_TYPE_SIZE_T
#AC_HEADER_TIME
#AC_HEADER_STDBOOL

# Checks for library functions.
#AC_PROG_GCC_TRADITIONAL
#AC_FUNC_MALLOC
#AC_FUNC_REALLOC
#AC_FUNC_STRTOD
#AC_CHECK_FUNCS([gettimeofday memmove memset pow strcasecmp strchr strdup strerror strncasecmp strrchr strtol])

AC_OUTPUT
