EXTRA_DIST =                  		\
	Makefile.examples		\
	action.hpp			\
	allegro.hpp			\
	allegroaction.cpp		\
	allegrohelloworld.cpp 		\
	allegrowidgets.cpp		\
	darkbitslogo_by_haiko.bmp	\
	fixedfont.bmp			\
	gui-chan.bmp			\
	helloworld.hpp			\
	hge.hpp				\
	hgeaction.cpp			\
	hgehelloworld.cpp		\
	hgewidgets.cpp			\
	openglallegro.hpp		\
	openglallegroaction.cpp		\
	openglallegrohelloworld.cpp	\
	openglallegrowidgets.cpp	\
	openglsdl.hpp			\
	openglsdlaction.cpp		\
	openglsdlhelloworld.cpp		\
	openglsdlwidgets.cpp		\
	openlayer.hpp			\
	openlayerwidgets.cpp		\
	sdl.hpp				\
	sdlaction.cpp			\
	sdlhelloworld.cpp		\
	sdlwidgets.cpp			\
	widgets.hpp